# QT_BMP_VIEWER

./: CMakeLists.txt  bmpprocessor.cpp  bmpprocessor.h  main.cpp  mainwindow.cpp  mainwindow.h
